# ddbox

./: pyproject.toml  requirements.txt  sample.ipynb  tutorial.ipynb
ddbox/: configs.py  utils.py
ddbox/data/: torch.py
ddbox/data/utils/: loaders.py
ddbox/docking/: vina.py
ddbox/docking/utils/: vina.py
ddbox/metrics/: distribution_difference.py  fcd.py  fraction_passes.py  fraction_unique.py  fragment.py  intdiv.py  scaffold.py  snn.py
ddbox/molecule/: __init__.py  descriptors.py  objects.py
