[tool.poetry]
name = "ddbox"
version = "0.1.2"
description = ""
authors = ["Azamat <unawares15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "1.26.15"
pre-commit = "^2.20.0"
pandas = "^2.0.1"
requests = "^2.30.0"
rdkit = "^2023.3.1"
tqdm = "^4.65.0"
fcd-torch = "^1.0.7"
openbabel = "^3.1.1.1"
cryptography = "^41.0.2"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
